src/app/areas/layout/_layout.scss
@import "variables";
$layout-header-height-size: 80px;
$layout-footer-height-size: 100px;
$layout-footer-text-color: $primary-text-color;
$layout-footer-bg-color: $secondary-dark-color;

body {
	// background: linear-gradient( rgba(220, 220, 220, 0.7), rgba(175, 175, 175, 0.5)), no-repeat center center url("/dist/assets/imgs/bg-hacker.jpg");
	background: $body-bg-color;
	background-size: cover;
	display: flex;
	flex-direction: column;
	box-sizing: border-box;

	> {
		app-navbar header {
			height: $layout-header-height-size;
		}

		main {
			@extend %main-container;
		}

		footer {
			font-size: .75rem;
			color: $layout-footer-text-color;
			background: $layout-footer-bg-color;
			padding: 0 1em;
			height: $layout-footer-height-size;
			display: flex;

			strong {
				&.company-name {
					font-family: "Montserrat", sans-serif;
					font-weight: 300;
				}
			}

			div {
				flex: 1;
			}

			.right-content {
				display: flex;
				justify-content: flex-end;
			}
		}
	}
}

.right-content {
	display: flex;
	justify-content: flex-end;
}

%main-container {
	display: flex;
	min-height: calc(100vh - (#{$layout-header-height-size} + #{$layout-footer-height-size}));

	> {
		section {
			padding: 3em;
			padding-top: 0;
			flex: 4 4;
		}

		app-sidenavbar nav,
		aside {
			flex: 1;
		}
	}
}
@media screen and (max-width: 500px) {
	body > {
		app-navbar,
		app-navbar header {
			flex-flow: column wrap;
			align-items: center;

			.logo {
				text-align: center;
			}
		}

		main {
			flex-direction: column;

			> app-sidenavbar {
				max-width: inherit;

				nav {
					order: 2;
				}
			}
		}
	}
}

